# MasteringPython

./: Copilotlearn.py  DevByte1.py  DevByte2.py  DevByte3.py  DevByte4.py  Learn10.py  Learn11.py  Learn12.py  Learn13.py  Learn14.py  Learn15.py  Learn16.py  Learn18.py  Learn19.py  Learn2.py  Learn20.py  Learn200.py  Learn21.py  Learn22.py  Learn23.py  Learn24.py  Learn25.py  Learn26.py  Learn27.py  Learn28.py  Learn29.py  Learn3.py  Learn30.py  Learn31.py  Learn32.py  Learn33.py  Learn34.py  Learn4.py  Learn43.py  Learn5.py  Learn6.py  Learn7.py  Learn8.py  Learn9.py  LearnPython1.py  (+25 more)
LearnPoetry/poetry-tutorial-project/: pyproject.toml
LearnPoetry/poetry-tutorial-project/poetry_tutorial_project/: main2.py
MyPoetry/: pyproject.toml
MyPoetry/mypoetry/: HelloPoetry.py
MyPoetry/tests/: test_mypoetry.py
PoetryProject/: LeanPython20.py  Learn10.py  Learn11.py  pyproject.toml
Rust/: hello  hello.rs
myPoetry/: pyproject.toml
