[tool.poetry]
name = "HelloPoetry"
version = "0.1.0"
description = "This is Poetry Learning project"
authors = ["syed majid raza"]
license = "y"

[tool.poetry.dependencies]
python = "^3.7"
FAST = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
